# Hailo

./: CMakeLists.txt  README.md  learn.cpp  main.cpp
src/: Myhailo.cpp  Myhailo.hpp  open_camera.cpp  open_camera.hpp
